--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "highlight.js": "^11.8.0",
     "microcms-js-sdk": "^2.6.1",
     "next": "13.4.19",
     "next-seo": "^6.1.0",
