--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.5.3",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
