--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "markuplint": "markuplint \"./src/**/*.{jsx,tsx}\""
   },
   "dependencies": {
     "@next/font": "^13.5.3",
@@ -29,9 +30,12 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@markuplint/jsx-parser": "^3.10.0",
+    "@markuplint/react-spec": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint-config-prettier": "^9.0.0",
+    "markuplint": "^3.13.0",
     "prettier": "^3.0.3"
   }
 }
